[package]
name = "menubar"
version = "0.0.2" # Remember to update html_root_url in lib.rs
authors = ["Mads Marquart <mads@marquart.dk>"]
edition = "2018"
description = "Cross-platform native menu library."
documentation = "https://docs.rs/menubar"
readme = "README.md"
repository = "https://github.com/madsmtm/menubar"
license = "MIT OR Apache-2.0"
keywords = ["menu", "context-menu", "native", "NSMenu", "HMENU"]
categories = [
    "accessibility",
    "api-bindings",
    "gui",
    # "os::linux-apis",
    "os::macos-apis",
    "os::windows-apis",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "=0.3.0-beta.0" }
objc2-foundation = { version = "=0.2.0-alpha.5" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "wincon"] }

[dev-dependencies]
winit = "0.26"
raw-window-handle = "0.4"
env_logger = "0.9"
