[package]
name = "menubar"
version = "0.0.2" # Remember to update html_root_url in lib.rs
authors = ["Mads Marquart <mads@marquart.dk>"]
edition = "2018"
description = "Cross-platform native menu library."
documentation = "https://docs.rs/menubar"
readme = "README.md"
repository = "https://github.com/madsmtm/menubar"
license = "MIT OR Apache-2.0"
keywords = ["menu", "context-menu", "native", "NSMenu", "HMENU"]
categories = [
    "accessibility",
    "api-bindings",
    "gui",
    # "os::linux-apis",
    "os::macos-apis",
    "os::windows-apis",
]

[dependencies]
raw-window-handle = { version = "0.5", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "=0.3.0-beta.0" }
objc2-foundation = { version = "=0.2.0-alpha.5" }

[target.'cfg(target_os = "windows")'.dependencies]
ahash = { version = "0.8.2", default-features = false, features = ["std"] }
tinyvec = { version = "1.6.0", features = ["alloc"] }

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.42"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
]

[dev-dependencies]
winit = { version = "0.27", default-features = false }
env_logger = "0.9"
